unpackaged/main/default/objects/Payment_Allocation__c/fields/Mode_of_Payment__c.field-meta.xml
<CustomField>
    <fullName>Mode_of_Payment__c</fullName>
    <label>Mode of Payment</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cash</fullName>
                <default>true</default>
                <label>Cash</label>
            </value>
            <value>
                <fullName>Credit Card</fullName>
            </value>
            <value>
                <fullName>Debit Card</fullName>
            </value>
            <value>
                <fullName>Mobile Wallets (Paytm, PhonePe)</fullName>
            </value>
            <value>
                <fullName>UPI</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>