unpackaged/main/default/objects/Payment_Allocation__c/fields/Payment_Date__c.field-meta.xml
<CustomField>
    <fullName>Payment_Date__c</fullName>
    <formula>Customer_Invoice__r.Invoice_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Payment Date</label>
    <type>Date</type>
</CustomField>