unpackaged/main/default/objects/Payment_Allocation__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Customer_Invoice__c</columns>
    <columns>Payment_Date__c</columns>
    <columns>NAME</columns>
    <columns>Mode_of_Payment__c</columns>
    <columns>Advance_Amount_Payment__c</columns>
    <columns>Outstanding_Amount__c</columns>
    <columns>Number_of_Payment__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>